--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,4 +1,4 @@
-.login-page {
+.login {
   height: 100%;
   min-height: 100vh;
   display: flex;
@@ -7,7 +7,7 @@
   justify-content: center;
 }
 
-.login-page__container {
+.login__container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +17,6 @@
   border-radius: 20px;
 }
 
-.login-page__form {
+.login__form {
   background-color: #fff;
 }
