--- a/src/common/buttons/Button/Button.module.scss
+++ b/src/common/buttons/Button/Button.module.scss
@@ -4,10 +4,17 @@
   border: none;
   color: #fff;
   background-color: #f5c678;
+  box-shadow: 0 4px 50px 2px rgba(0, 0, 0, 0.15);
+
   cursor: pointer;
   transition: background-color 0.2s ease-out;
 
   &:hover {
     background-color: #f8d568;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  }
+
+  &:active {
+    background-color: rgba(245, 198, 120, 0.7);
   }
 }
