--- a/src/common/fields/inputs/Input/Input.module.scss
+++ b/src/common/fields/inputs/Input/Input.module.scss
@@ -12,14 +12,22 @@
   padding: 10px;
   border-radius: 5px;
   border: none;
+  outline: none;
+  font-size: 12px;
+  color: #000;
   background: rgba(237, 237, 237, 0.7);
+  caret-color: #000;
+
+  &:hover {
+    background-color: #ebebeb;
+  }
 
   &::placeholder {
     color: rgba(0, 0, 0, 0.5);
   }
 
   .input__error & {
-    background: rgba(219, 57, 57, 0.3);
+    background-color: rgba(219, 57, 57, 0.3);
   }
 }
 
