--- a/src/common/buttons/Button/Button.module.scss
+++ b/src/common/buttons/Button/Button.module.scss
@@ -4,7 +4,7 @@
   border: none;
   color: #fff;
   background-color: #f5c678;
-  box-shadow: 0 4px 50px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
 
   cursor: pointer;
   transition: background-color 0.2s ease-out;
