--- a/src/common/fields/inputs/Input/Input.module.scss
+++ b/src/common/fields/inputs/Input/Input.module.scss
@@ -1,9 +1,11 @@
 .input {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
+  padding-bottom: 14px;
 }
 
 .input__item {
@@ -32,10 +34,11 @@
 }
 
 .input__validation {
+  position: absolute;
+  bottom: 0;
+  left: 10px;
   display: block;
   width: 100%;
-  margin-left: 10px;
-  margin-bottom: 10px;
   font-weight: 300;
   font-size: 10px;
   line-height: 14px;
