--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -8,15 +8,41 @@
 }
 
 .login__container {
+  height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 0 100px;
+  justify-content: space-between;
   box-shadow: 0px 4px 50px 2px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
+  overflow: hidden;
+}
+
+.login__header {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 16px 100px;
+  font-size: 40px;
+  text-align: center;
+  color: #fff;
+  background: #000 url('../../static/images/dogge_background.svg');
 }
 
 .login__form {
+  padding: 20px 100px;
   background-color: #fff;
+}
+
+.login__signup {
+  margin-bottom: 15px;
+  font-weight: 600;
+  font-size: 12px;
+
+  a {
+    text-decoration: none;
+    color: #f5c678;
+  }
 }
